trunk/Archive2/21/215858cae61032/output
main.cpp: In member function 'void Test::f()':
main.cpp:9:9: error: no match for 'operator~' (operand type is 'Test')
         ~Test();
         ^
